--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="container">
       <div class="input-form">
         <input type="text" class="todo-input" />
-        <button class="todo-button">追加</button>
+        <button class="todo-button"><i class="fas fa-plus-square"></i></button>
       </div>
       <div class="todo-container">
         <ul class="todo-list">
